--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,69 +1,75 @@
-name: Lint and Quality Checks
-
-on:
-  push:
-    branches: [ master, main ]
-  pull_request:
-    branches: [ master, main ]
+name: Lint and Code Quality
+on: [push, pull_request]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        cache: 'npm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Run ESLint
-      run: npm run lint
-      continue-on-error: true
-
-    - name: Check for security vulnerabilities
-      run: npm audit --audit-level=moderate
-      continue-on-error: true
-
-    - name: Validate theme.toml
-      run: |
-        if [ -f "theme.toml" ]; then
-          echo "✅ theme.toml exists"
-          cat theme.toml
-        else
-          echo "❌ theme.toml missing"
-          exit 1
-        fi
-
-    - name: Check Hugo theme structure
-      run: |
-        required_dirs=("layouts" "static" "assets" "archetypes" "exampleSite")
-        for dir in "${required_dirs[@]}"; do
-          if [ -d "$dir" ]; then
-            echo "✅ $dir directory exists"
+      - name: Run ESLint (if available)
+        run: |
+          if npm run lint --if-present; then
+            echo "✅ ESLint passed"
           else
-            echo "❌ $dir directory missing"
-            exit 1
+            echo "⚠️ ESLint not configured or failed"
           fi
-        done
 
-    - name: Validate example site config
-      run: |
-        if [ -f "exampleSite/config.toml" ]; then
-          echo "✅ exampleSite/config.toml exists"
-          # Check for required fields
-          if grep -q "theme = " exampleSite/config.toml; then
-            echo "✅ theme configuration found"
+      - name: Run Stylelint (if available)
+        run: |
+          if npm run stylelint --if-present; then
+            echo "✅ Stylelint passed"
           else
-            echo "❌ theme configuration missing"
-            exit 1
+            echo "⚠️ Stylelint not configured or failed"
           fi
-        else
-          echo "❌ exampleSite/config.toml missing"
-          exit 1
-        fi 
+
+      - name: Check code formatting
+        run: |
+          echo "🔍 Checking code formatting..."
+          if command -v prettier &> /dev/null; then
+            npx prettier --check "**/*.{js,jsx,ts,tsx,json,css,scss,md,html}" || {
+              echo "❌ Code formatting issues found. Run 'npx prettier --write' to fix."
+              exit 1
+            }
+          else
+            echo "⚠️ Prettier not available, skipping format check"
+          fi
+
+      - name: Check for TODO/FIXME comments
+        run: |
+          echo "🔍 Checking for TODO/FIXME comments..."
+          if grep -r -i "TODO\|FIXME\|HACK\|XXX" --include="*.js" --include="*.jsx" --include="*.ts" --include="*.tsx" --include="*.scss" --include="*.css" --include="*.html" .; then
+            echo "⚠️ Found TODO/FIXME comments in code"
+            echo "Consider addressing these before merging"
+          else
+            echo "✅ No TODO/FIXME comments found"
+          fi
+
+      - name: Check file sizes
+        run: |
+          echo "📊 Checking file sizes..."
+          find . -name "*.js" -o -name "*.css" -o -name "*.scss" | xargs wc -l | sort -nr | head -10
+
+      - name: Validate package.json
+        run: |
+          echo "🔍 Validating package.json..."
+          npm run validate --if-present || echo "⚠️ No validate script found"
+
+      - name: Check for console.log statements
+        run: |
+          echo "🔍 Checking for console.log statements..."
+          if grep -r "console\.log" --include="*.js" --include="*.jsx" --include="*.ts" --include="*.tsx" .; then
+            echo "⚠️ Found console.log statements. Consider removing for production."
+          else
+            echo "✅ No console.log statements found"
+          fi 
