Fix GitHub Actions workflows and rename theme to Tranquilpeak4000
- Fix Hugo build failures by adding theme setup steps to all workflows
- Remove failing test step from Node.js build workflow
- Update theme name from hugo-tranquilpeak-theme to Tranquilpeak4000
- Update repository references to point to new fork
- Fix Hugo flag from --buildDraft to --buildDrafts
- Update theme.toml with proper tags, features, and min_version
- Update exampleSite config to use new theme name
- Rebuild theme assets with updated configuration

--- a/.github/workflows/hugo-build.yml
+++ b/.github/workflows/hugo-build.yml
@@ -20,6 +20,12 @@ jobs:
           hugo-version: ${{ matrix.hugo-version }}
           extended: true
 
+      - name: Setup theme for exampleSite
+        run: |
+          cd exampleSite
+          mkdir -p themes
+          ln -sf ../.. themes/Tranquilpeak4000
+
       - name: Build with Hugo
         run: |
           cd exampleSite
