--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -27,11 +27,10 @@ jobs:
           cd exampleSite
           hugo --minify --gc --buildDrafts --buildFuture
 
-      - name: Check internal links
+      - name: Check links
         uses: lycheeverse/lychee-action@v1.7.0
         with:
           args: |
-            --output /tmp/lychee/out.md
             --format markdown
             --exclude mailto:
             --exclude tel:
@@ -39,25 +38,12 @@ jobs:
             public/
           fail: true
 
-      - name: Check external links (non-blocking)
-        uses: lycheeverse/lychee-action@v1.7.0
-        continue-on-error: true
-        with:
-          args: |
-            --output /tmp/lychee/external.md
-            --format markdown
-            --exclude mailto:
-            --exclude tel:
-            --exclude file:
-            --base public/
-            public/
-
       - name: Upload link check results
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: link-check-results
-          path: /tmp/lychee/
+          path: lychee.md
           retention-days: 7
 
       - name: Check for broken image links
