Add continue-on-error to Trivy SARIF upload step
- Makes the security workflow more robust by allowing it to continue even if SARIF upload fails
- Prevents the entire security scan from failing due to upload issues

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -40,6 +40,7 @@ jobs:
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
+        continue-on-error: true
 
       - name: Check for secrets in code
         uses: trufflesecurity/trufflehog@main
