--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -35,7 +35,7 @@ jobs:
             --exclude mailto:
             --exclude tel:
             --exclude file:
-            public/
+            exampleSite/public/
           fail: true
 
       - name: Upload link check results
