Fix setup-theme action to handle existing symlinks properly
- Add rm -rf to remove existing symlink/directory before creating new one
- Prevents 'cannot overwrite directory' error when symlink already exists
- Ensures clean theme setup on every workflow run

--- a/.github/actions/setup-theme/action.yml
+++ b/.github/actions/setup-theme/action.yml
@@ -9,4 +9,7 @@ runs:
       run: |
         cd exampleSite
         mkdir -p themes
+        # Remove existing symlink or directory if it exists
+        rm -rf themes/Tranquilpeak4000
+        # Create the symlink
         ln -sf ../.. themes/Tranquilpeak4000 
