--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prod": "npm run grunt -- buildProd",
     "grunt": "node ./node_modules/grunt-cli/bin/grunt",
     "lint": "node ./node_modules/eslint/bin/eslint.js .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -45,6 +47,8 @@
     "grunt-sync": "^0.8.2",
     "grunt-text-replace": "^0.4.0",
     "include-all": "^4.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "load-grunt-tasks": "^5.1.0",
     "nanoid": "^3.1.23",
     "sass": "^1.37.5"
