feat: replace peaceiris/actions-hugo with custom wget-based action
- Create custom .github/actions/setup-hugo action that downloads Hugo directly
- Replace peaceiris/actions-hugo@v3 in all 7 workflows
- Fix Dockerfile.baselines to use configurable HUGO_VERSION
- Add retry logic and proper error handling for Hugo downloads
- Support both regular and extended Hugo versions
- Improve reliability by eliminating Docker image dependencies

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
+        uses: ./.github/actions/setup-hugo
         with:
           hugo-version: "0.148.2"
           extended: true
@@ -82,7 +82,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
+        uses: ./.github/actions/setup-hugo
         with:
           hugo-version: "0.148.2"
           extended: true
