--- a/.github/workflows/hugo-build.yml
+++ b/.github/workflows/hugo-build.yml
@@ -15,7 +15,7 @@ jobs:
           submodules: recursive
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
+        uses: ./.github/actions/setup-hugo
         with:
           hugo-version: ${{ matrix.hugo-version }}
           extended: true
