--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -11,7 +11,7 @@ jobs:
           submodules: recursive
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
+        uses: ./.github/actions/setup-hugo
         with:
           hugo-version: 'latest'
           extended: true
