--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -20,7 +20,7 @@ jobs:
         submodules: recursive
 
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v3
+      uses: ./.github/actions/setup-hugo
       with:
         hugo-version: 'latest'
         extended: true
