--- a/.github/workflows/setup-hugo.yml
+++ b/.github/workflows/setup-hugo.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Setup Hugo ${{ inputs.hugo-version }}
         id: setup-hugo
-        uses: peaceiris/actions-hugo@v3
+        uses: ./.github/actions/setup-hugo
         with:
           hugo-version: ${{ inputs.hugo-version }}
           extended: true
