--- a/.github/workflows/test-latest.yml
+++ b/.github/workflows/test-latest.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v3
+      uses: ./.github/actions/setup-hugo
       with:
         hugo-version: ${{ matrix.hugo-version }}
         extended: true
