--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:report": "playwright show-report",
     "test:e2e:ci": "playwright test --config=playwright.ci.config.js",
+    "test:e2e:verbose": "LOG_LEVEL=debug playwright test",
+    "test:e2e:quiet": "LOG_LEVEL=error playwright test",
+    "test:e2e:fast": "playwright test --grep 'fast'",
+    "test:e2e:stable": "playwright test --grep 'stable'",
+    "start:webserver": "node scripts/start-webserver.js",
+    "migrate:logging": "node scripts/migrate-logging.js",
+    "hugo:serve": "npm run hugo:setup && cd exampleSite && hugo server --bind 0.0.0.0 --port 1313",
+    "hugo:setup": "./setup-examplesite.sh",
     "test:visual": "playwright test visual-regression.spec.js",
     "test:visual:update": "playwright test visual-regression.spec.js --update-snapshots",
     "test:visual:ci": "playwright test visual-regression.spec.js --config=playwright.ci.config.js --update-snapshots",
@@ -50,6 +58,7 @@
   "homepage": "https://github.com/petems/hugo-tranquilpeak-4000",
   "devDependencies": {
     "@playwright/test": "^1.54.2",
+    "allure-playwright": "^3.3.3",
     "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
     "grunt": "^1.4.1",
