--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:report": "playwright show-report",
-    "test:e2e:ci": "playwright test --config=playwright.ci.config.js",
+    "test:e2e:ci": "playwright test",
     "test:e2e:verbose": "LOG_LEVEL=debug playwright test",
     "test:e2e:quiet": "LOG_LEVEL=error playwright test",
     "test:e2e:fast": "playwright test --grep 'fast'",
@@ -28,7 +28,7 @@
     "hugo:setup": "./setup-examplesite.sh",
     "test:visual": "playwright test visual-regression.spec.js",
     "test:visual:update": "playwright test visual-regression.spec.js --update-snapshots",
-    "test:visual:ci": "playwright test visual-regression.spec.js --config=playwright.ci.config.js --update-snapshots",
+    "test:visual:ci": "playwright test visual-regression.spec.js --update-snapshots",
     "test:visual:dev": "NODE_ENV=development playwright test visual-regression.spec.js",
     "test:visual:headed": "playwright test visual-regression.spec.js --headed",
     "test:visual:baselines": "node generate-baselines.js",
